--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,18 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
+        <!-- MainActivity contains the stream of freshest photos -->
         <activity
             android:name=".main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
+        </activity>
+
+        <!-- Splash activity is shown when the app is launched -->
+        <activity
+            android:name=".startup.SplashActivity"
+            android:theme="@style/SplashActivityTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,6 +46,7 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="b5603d69afa768e1a9d3602d95ff0106b83ed7cd" />
+        <service android:name=".sync.SyncService" />
     </application>
 
 </manifest>
