--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
+        tools:replace="android:allowBackup, android:supportsRtl"
         tools:ignore="GoogleAppIndexingWarning">
 
         <!-- MainActivity contains the stream of freshest photos -->
@@ -45,8 +46,11 @@
         <!-- Fabric API key metadata -->
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="b5603d69afa768e1a9d3602d95ff0106b83ed7cd" />
-        <service android:name=".sync.SyncService" />
+            android:value="b5603d69afa768e1a9d3602d95ff0106b83ed7cd" />/
+
+        <service
+            android:name=".sync.SyncService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
