--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <!-- Permissions -->
     <!-- This is not an offline app - we get pictures from the internet-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- We need to keep everything woke when the sync service runs -->
@@ -30,7 +31,7 @@
 
         <!-- MainActivity contains the stream of freshest photos -->
         <activity
-            android:name=".main.MainActivity"
+            android:name=".main.view.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
