--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'realm-android'
@@ -148,9 +157,9 @@ dependencies {
     // Eventbus, as a way to pass events to any anonymous listener. Especially useful for communicating between threads
     implementation 'org.greenrobot:eventbus:3.0.0'
 
-    // Binding collection adapter. Provides an easy way to bind collections to list views and recycler views
-    implementation 'me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:2.2.0'
-    implementation 'me.tatarka.bindingcollectionadapter2:bindingcollectionadapter-recyclerview:2.2.0'
+//    // Binding collection adapter. Provides an easy way to bind collections to list views and recycler views
+//    implementation 'me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:2.2.0'
+//    implementation 'me.tatarka.bindingcollectionadapter2:bindingcollectionadapter-recyclerview:2.2.0'
 
     // Glide, the best image loading library
     implementation 'com.github.bumptech.glide:glide:4.1.1'
