--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,7 @@
     package="laurcode.com.retire">
 
     <!-- Permissions -->
-    <!-- This is not an offline app - we get pictures from the internet-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <!-- We need to keep everything woke when the sync service runs -->
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <!-- Application-wide config. Due to the demo purposes of this app the following constraints are applied:
          1. No cloud backup
@@ -30,15 +25,10 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <!-- MainActivity contains the stream of freshest photos -->
-        <activity
-            android:name="laurcode.com.retire.main.view.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
 
         <!-- Splash activity is shown when the app is launched -->
         <activity
-            android:name="laurcode.com.retire.startup.SplashActivity"
+            android:name=".startup.SplashActivity"
             android:theme="@style/SplashActivityTheme">
 
             <intent-filter>
@@ -51,11 +41,7 @@
         <!-- Fabric API key metadata -->
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="b5603d69afa768e1a9d3602d95ff0106b83ed7cd" />/
-
-        <service
-            android:name="laurcode.com.retire.sync.SyncService"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
+            android:value="b5603d69afa768e1a9d3602d95ff0106b83ed7cd" />
     </application>
 
 </manifest>
